[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "hermos",email = "ayoub.medjkoune@oteria.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "flask-security (>=5.6.1,<6.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src", from = "."}]

[tool.poetry.scripts]
start = "run:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
